@@ -1,5 +1,11 @@
 === RMW Release Notes ===
 
+2019-07-21
+
+Git: Because rmw automatically creates a config file in the user's home
+directory, rmw no longer searches in /etc (or /usr/local/etc..) for rmwrc.
+It can be removed from your system if installed previously.
+
 2019-07-09
 
 rmw v0.7.02 has been released. See the ChangeLog for details.
